# BitbotCopilot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
Communication/: BitbotTcpProtocalV1.cpp  BitbotTcpProtocalV1.h  LocalCommand.hpp  MetaBackendCom.hpp  MetaCommunication.hpp
Communication/RCM/: RemoteCommand.hpp  SessionManager.cpp  SessionManager.h  SftpFileSystemModel.cpp  SftpFileSystemModel.h  SftpFileTransport.cpp  SftpFileTransport.h
Res/: UI.qrc  icon.aps  icon.rc
Res/Translation/: BitbotCopilot_zh_CN.ts
Res/developer_resources/: splash_Screen.vsdx
UI/: AboutPage.cpp  AboutPage.h  AboutPage.ui  HomePage.cpp  HomePage.h  MainWindow.cpp  MainWindow.h  PilotPage.cpp  PilotPage.h  ProfileSelector.cpp  ProfileSelector.h  SettingsPage.cpp  SettingsPage.h  ViewDataPage.cpp  ViewDataPage.h  ViewDataPage.ui
UI/DataViewer/: DataViewerFlowIndicator.cpp  DataViewerFlowIndicator.h  DataViewerPage.cpp  DataViewerPage.h  DataViewerPage.ui  RemoteFileSelector.cpp  RemoteFileSelector.h
UI/SettingPageWidget/: AvatarNameEditor.cpp  AvatarNameEditor.h  AvatarSelector.cpp  AvatarSelector.h  PopupSettingsPage.h  PopupSettingspage.cpp  RobotConfigForm.cpp  RobotConfigForm.h  SettingsAutorunCfgWidget.cpp  SettingsAutorunCfgWidget.h  SettingsAutorunLauncher.cpp  SettingsAutorunLauncher.h  SettingsAutorunWidget.cpp  SettingsAutorunWidget.h  SettingsBackendWidget.cpp  SettingsBackendWidget.h  SettingsDatabaseWidget.cpp  SettingsDatabaseWidget.h  SettingsFrontEndWidget.cpp  SettingsFrontEndWidget.h
UI/VirtualTrackpad/: SimpleTrackpad.cpp  SimpleTrackpad.h  VirtualTrackpad.cpp  VirtualTrackpad.h  VirtualTrackpad.ui
UI/widget/: BackendManager.cpp  BackendManager.h  BackendManager.ui  ClickableElaScrollPageArea.cpp  ClickableElaScrollPageArea.h  CustomImageLabel.hpp  CustomSplashScreen.cpp  CustomSplashScreen.h  DataViewerFlowIndicator.cpp  DataViewerFlowIndicator.h  FluentLoadingWidget.cpp  FluentLoadingWidget.h  FluentMessageBox.hpp  MetaRTDView.cpp  MetaRTDView.h  ProfileIDCard.cpp  ProfileIDCard.h  RTDConnection.cpp  RTDConnection.h  RTDConnection.ui  RTDDeviceInfo.cpp  RTDDeviceInfo.h  RTDDeviceInfo.ui  RTDDeviceInfoTableModel.cpp  RTDDeviceInfoTableModel.h  RTDGamepadStatus.cpp  RTDGamepadStatus.h  RTDGamepadStatus.ui  RTDKernelStates.cpp  RTDKernelStates.h  RTDKernelStates.ui  RTDKeyboardStatus.cpp  RTDKeyboardStatus.h  RTDKeyboardStatus.ui  RTDRobotStates.cpp  RTDRobotStates.h  RTDRobotStates.ui  SettingsLineInfoWidget.cpp  SettingsLineInfoWidget.h
Utils/DataReadWriter/: csv_io.hpp
Utils/GamepadDriver/: ZGamepad_XInput.hpp  ZQGamepad.cpp  ZQGamepad.h  demo.cpp
Utils/Settings/: SettingsHandler.cpp  SettingsHandler.h  parser.hpp
